test/functions/bharshbarg/assoc-ref-return.good
assoc-ref-return.chpl:5: warning: whole-domain assignment has been serialized (see note in $CHPL_HOME/STATUS)
Testing associative array of arrays...
3
assoc-ref-return.chpl:15: error: halt reached - array index out of bounds: 50
